# bevy-game-washing-machine

./: Cargo.toml  README.md
src/: main.rs  setupcamera.rs  setupplayer.rs
